--- a/public/css/product.css
+++ b/public/css/product.css
@@ -2,13 +2,13 @@
   width: 20rem;
   max-width: 90%;
   margin: auto;
+  display: block;
 }
 
 .product-item {
   width: 20rem;
   max-width: 95%;
-  margin: auto;
-  margin-top: 20px;
+  margin: 1rem;
 }
 
 .product__title {
