--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -6,7 +6,7 @@
     <%- include('../includes/navigation.ejs') %>
 
       <main>
-        <% if(prods.length> 0) { %>
+        <% if (prods.length> 0) { %>
           <div class="grid">
             <% for (let product of prods) { %>
               <article class="card product-item">
@@ -19,23 +19,26 @@
                   <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                 </div>
                 <div class="card__content">
-                  <h2 class="product__price">$<%= product.price %>
+                  <h2 class="product__price">$
+                    <%= product.price %>
                   </h2>
                   <p class="product__description">
                     <%= product.description %>
                   </p>
                 </div>
                 <div class="card__actions">
-                  <a href="/admin/edit-product" class="btn">Edit</a>
+                  <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                   <form action="/admin/delete-product" method="POST">
-                    <button type="submit" class="btn">Delete</button>
+                    <input type="hidden" name="productId" value="<%= product.id %>">
+                    <button class="btn" type="submit">Delete</button>
                   </form>
+
                 </div>
               </article>
               <% } %>
           </div>
           <% } else { %>
-            <h1>No Products Found!!</h1>
-            <% }%>
+            <h1>No Products Found!</h1>
+            <% } %>
       </main>
       <%- include('../includes/end.ejs') %>
