--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -6,7 +6,7 @@
     <%- include('../includes/navigation.ejs') %>
 
       <main>
-        <% if(prods.length> 0) { %>
+        <% if (prods.length> 0) { %>
           <div class="grid">
             <% for (let product of prods) { %>
               <article class="card product-item">
@@ -26,13 +26,13 @@
                   </p>
                 </div>
                 <div class="card__actions">
-                  <button class="btn">Add to Cart</button>
+                  <%- include('../includes/add-to-cart.ejs', {product}) %>
                 </div>
               </article>
               <% } %>
           </div>
           <% } else { %>
-            <h1>No Products Found!!</h1>
-            <% }%>
+            <h1>No Products Found!</h1>
+            <% } %>
       </main>
       <%- include('../includes/end.ejs') %>
