--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -8,7 +8,7 @@
           <%= product.title %>
         </h1>
         <hr>
-        <div>
+        <div class="image">
           <img style="width: 30%;" src="<%= product.imageUrl %>" alt="<%= product.title %>">
         </div>
         <h2>
