--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -17,6 +17,8 @@
         <p>
           <%= product.description %>
         </p>
-        <%- include('../includes/add-to-cart.ejs') %>
+        <% if(isAuthenticated) { %>
+          <%- include('../includes/add-to-cart.ejs', {product}) %>
+            <% } %>
       </main>
       <%- include('../includes/end.ejs') %>
