--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -27,6 +27,7 @@
             <textarea name="description" id="description"
               rows="5"><% if(editing) { %><%=product.description%><%}%></textarea>
           </div>
+          <input type="hidden" value="<%= csrfToken %>" name="_csrf">
           <% if(editing) {%>
             <input type="hidden" value="<%= product._id %>" name="productId">
             <% } %>
