--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -12,19 +12,21 @@
             <%= errorMessage %>
           </div>
           <% } %>
-            <form class="login-form" action="/login" method="POST">
+            <form class="login-form" action="/signup" method="POST">
               <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="text" name="email" id="email">
+                <input type="email" name="email" id="email">
               </div>
               <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
               </div>
+              <div class="form-control">
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" name="confirmPassword" id="confirmPassword">
+              </div>
               <input type="hidden" value="<%= csrfToken %>" name="_csrf">
-              <button class="btn" type="submit">
-                Login
-              </button>
+              <button class="btn" type="submit">Signup</button>
             </form>
       </main>
       <%- include('../includes/end.ejs') %>
