--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,4 +1,5 @@
 <form action="/cart" method="POST">
   <button class="btn" type="submit">Add To Cart</button>
   <input type="hidden" name="productId" value="<%= product._id %>">
+  <input type="hidden" value="<%= csrfToken %>" name="_csrf">
 </form>
