--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -29,9 +29,13 @@
         <li class="main-header__item">
           <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
         </li>
+        <li class="main-header__item">
+          <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+        </li>
         <% } else { %>
           <li class="main-header__item">
             <form action="/logout" method="post">
+              <input type="hidden" value="<%= csrfToken %>" name="_csrf">
               <button type="submit">Logout</button>
             </form>
           </li>
@@ -48,19 +52,36 @@
     <li class="mobile-nav__item">
       <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
     </li>
-    <li class="mobile-nav__item">
-      <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
-    </li>
-    <li class="mobile-nav__item">
-      <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
-    </li>
-    <li class="mobile-nav__item">
-      <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
-      </a>
-    </li>
-    <li class="mobile-nav__item">
-      <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
-      </a>
-    </li>
+    <% if (isAuthenticated) { %>
+      <li class="mobile-nav__item">
+        <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
+      </li>
+      <li class="mobile-nav__item">
+        <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
+      </li>
+      <li class="mobile-nav__item">
+        <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
+        </a>
+      </li>
+      <li class="mobile-nav__item">
+        <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
+        </a>
+      </li>
+      <% } %>
+        <% if (!isAuthenticated) { %>
+          <li class="mobile-nav__item">
+            <a class="<%= path === '/login' ? 'active' : '' %>" href="/login">Login</a>
+          </li>
+          <li class="mobile-nav__item">
+            <a class="<%= path === '/signup' ? 'active' : '' %>" href="/signup">Signup</a>
+          </li>
+          <% } else { %>
+            <li class="mobile-nav__item">
+              <form action="/logout" method="post">
+                <input type="hidden" value="<%= csrfToken %>" name="_csrf">
+                <button type="submit">Logout</button>
+              </form>
+            </li>
+            <% } %>
   </ul>
 </nav>
