--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -12,22 +12,17 @@
             <%= errorMessage %>
           </div>
           <% } %>
-            <form class="login-form" action="/login" method="POST">
-              <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input type="text" name="email" id="email">
-              </div>
+            <form class="login-form" action="/new-password" method="POST">
               <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
               </div>
               <input type="hidden" value="<%= csrfToken %>" name="_csrf">
+              <input type="hidden" value="<%= userId %>" name="userId">
+              <input type="hidden" value="<%= passwordToken %>" name="passwordToken">
               <button class="btn" type="submit">
                 Login
               </button>
             </form>
-            <div class="centered">
-              <a href="/reset">Reset Password</a>
-            </div>
       </main>
       <%- include('../includes/end.ejs') %>
