--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -9,7 +9,7 @@
         </h1>
         <hr>
         <div class="image">
-          <img style="width: 30%;" src="<%= product.imageUrl %>" alt="<%= product.title %>">
+          <img style="width: 30%;" src="/<%= product.imageUrl %>" alt="<%= product.title %>">
         </div>
         <h2>
           <%= product.price %>
