--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -34,8 +34,10 @@
               </article>
               <% } %>
           </div>
-          <% } else { %>
-            <h1>No Products Found!</h1>
-            <% } %>
+          <%- include('../includes/pagination.ejs', {currentPage: currentPage, previousPage: previousPage,
+            hasPreviousPage: hasPreviousPage, hasNextPage: hasNextPage, nextPage: nextPage, lastPage: lastPage}) %>
+            <% } else { %>
+              <h1>No Products Found!</h1>
+              <% } %>
       </main>
       <%- include('../includes/end.ejs') %>
